classDiagram
  MonetaryAmount -- dateTime
  MonetaryAmount -- date
  MonetaryAmount -- StructuredValue


class MonetaryAmount {

  number maxValue
  number minValue
  dateTime validFrom
  date validFrom
  string value
  number value
  StructuredValue value
  boolean value
  string currency
  dateTime validThrough
  date validThrough

 }
